# finalTemplate

template/: DEVELOP.md  README.md  cookiecutter.json
template/hooks/: post_gen_project.py  pre_gen_project.py
template/{{cookiecutter.lambda_name}}/: .markdownlint.yaml  DEVELOP.md  LICENSE  Makefile  README.md  app.py  coverage-percentage.py  mkdocs.yml  mypy.ini  package-lock.json  package-lock.json.delete  pyproject.toml
template/{{cookiecutter.lambda_name}}/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
template/{{cookiecutter.lambda_name}}/.github/workflows/: main-serverless-service.yml
template/{{cookiecutter.lambda_name}}/cdk/: setup.py
template/{{cookiecutter.lambda_name}}/cdk/{{cookiecutter.service_name}}/: api_construct.py  constants.py  monitoring.py  service_stack.py
template/{{cookiecutter.lambda_name}}/cdk/{{cookiecutter.service_name}}/configuration/json/: dev_configuration.json
template/{{cookiecutter.lambda_name}}/tests/unit/: test_{{cookiecutter.service_name}}.py
template/{{cookiecutter.lambda_name}}/{{cookiecutter.service_name}}/: event.json  lambda_function.py
