[tool.poetry]
name = "{{cookiecutter.service_name}}"
version = "1.0.0"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author}}"]
classifiers=[
    "License :: MIT License",
    "Programming Language :: Python :: 3.12",
]
readme = "README.md"
keywords = ["{{cookiecutter.service_name}}"]
license = "MIT-0"

[tool.poetry.dependencies]
python = "^3.12.0"
requests = "^2.25.1"
pydantic = {version = "^2.5.2"}
email-validator = {version = "*"}
aws-lambda-powertools =  {extras = ["tracer"],version = "^2.28.0"}
mypy-boto3-dynamodb = "*"
cachetools = "*"
boto3 = "^1.29.6"
aws-lambda-env-modeler = "*"

[tool.poetry.dev-dependencies]
# CDK
{{cookiecutter.service_name}}-cdk = {path = "cdk", develop = true}
aws-cdk-lib = ">=2.110.1"
constructs = ">=10.3.0"
cdk-nag = ">2.27.200"
"aws-cdk.aws-lambda-python-alpha" = "^2.110.1a0"
"aws-cdk.aws-appconfig-alpha" = "^2.110.1a0"
cdk-monitoring-constructs = "*"
# DEV
pytest = "*"
pytest-mock = "*"
pycodestyle = "*"
pytest-cov = "*"
pytest-html = "*"
python-dateutil = "*"
python-dotenv = "*"
GitPython = "*"
yapf = "*"
radon = "*"
xenon = "*"
pre-commit = "*"
flake8 = "*"
isort = "*"
mkdocs-material = "*"
mkdocs-git-revision-date-plugin = "*"
types-cachetools = "*"
mypy = "*"
types-requests = "*"
toml = "*"

[tool.isort]
py_version = 311
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 150
skip = [
    ".gitignore",
    ".dockerignore",
    ".venv",
    ".build",
    "cdk.out",
    ".git",
    "node_modules",
]

[tool.yapfignore]
ignore_patterns = [".git", ".venv", ".build", "cdk.out", "node_modules"]

[tool.pytest.ini_options]
testpaths = "tests"


[tool.poetry.extras]
layer = ["xml.etree.ElementTree", "xml.dom.minidom"]
